--- a/frontend/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/src/app/components/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
           <a class="dropdown-item" href="#"><i class="fa fa-user-circle"></i> Mi Perfil</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" [routerLink]="['albumes']"><i class="fa fa-images"></i> Mis albumes</a>
-          <a class="dropdown-item" href="#"><i class="fa fa-image"></i> Mis Fotos</a>
+          <a class="dropdown-item" [routerLink]="['fotos']" routerLinkActive="router-link-active" ><i class="fa fa-image"></i> Mis Fotos</a>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
