--- a/frontend/src/app/components/albumes/albumes.component.html
+++ b/frontend/src/app/components/albumes/albumes.component.html
@@ -41,9 +41,18 @@
     </div>
   </div>
 </div>
+
+<div class="row" *ngIf="loading">
+  <div class="col">
+    <div class="d-flex justify-content-center align-items-center">
+      <i class="fa fa-5x fa-spin fa-spinner"></i>
+
+    </div>
+  </div>
+</div>
   
 
-<div class="row" *ngIf="albumes.length == 0">
+<div class="row" *ngIf="albumes.length == 0 && !loading">
   <div class="col">
     <h1 class="text-center display-4" style="margin-top: 150px;">No tienes ningún album creado</h1>
   </div>
@@ -63,6 +72,7 @@
       <div class="card-footer">
         <button class="btn btn-info" (click)="verAlbum(album._id)"><i class="fa fa-eye"></i></button>
         <button class="btn btn-danger ml-2" (click)="deleteAlbum(album._id)"><i class="fa fa-trash"></i></button>
+        <button class="btn btn-warning ml-2" (click)="editAlbum(album._id)"><i class="fa fa-edit"></i></button>
       </div>
     </div>
   </div>
