--- a/frontend/src/app/components/contenido/contenido.component.html
+++ b/frontend/src/app/components/contenido/contenido.component.html
@@ -1,3 +1,11 @@
-<p>
-  contenido works!
-</p>
+<div class="row" *ngIf="loading">
+    <div class="col">
+        <div class="d-flex justify-content-center align-items-center">
+            <i class="fa fa-5x fa-spin fa-spinner"></i>
+
+        </div>
+    </div>
+</div>
+
+<app-tarjeta2 [fotos]="fotos"></app-tarjeta2>
+      
