--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="alert alert-danger" role="alert" *ngIf="errorPassword">
+  {{mensajeError}}
+</div>
+
 <div class="contaner mt-4">
   <div class="row justify-content-center">
     <div class="col-md-5">
