--- a/frontend/src/app/components/perfil/perfil.component.html
+++ b/frontend/src/app/components/perfil/perfil.component.html
@@ -1,3 +1,196 @@
-<p>
-  perfil works!
-</p>
+<div class="alert alert-warning" role="alert" *ngIf="error">
+  Contraseña actual incorrecta, reintentelo de nuevo
+</div>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="success">
+  Contraseña cambiada con exito!!!.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-lg-4">
+        <img src="http://gravatar.com/avatar/{{user.gravatar}}?d=monsterid&s=200" class="imgRedonda" alt="">
+        <!--<button class="btn btn-primary ml-4 mt-2"><i class="fa fa-user"></i> Subir Foto Perfil</button>-->
+      </div>
+
+      <div class="col-lg-8">
+        <h3>{{user.name}} {{user.surname}}</h3>
+        <p>{{user.seguidores}} Seguidores.</p>
+        <hr>
+
+        <div class="row">
+          <div class="col-12">
+            <button class="btn btn-primary ml-3" data-toggle="modal" data-target="#exampleModal" *ngIf="user._id === idUserAuth">Cambiar Contraseña</button>
+            <button class="btn btn-primary ml-3" data-toggle="modal" data-target="#exampleModal2" *ngIf="user._id === idUserAuth">Editar datos del usuario</button>
+            <button class="btn btn-primary ml-3" (click)="verFotos()">Ver Fotos publicadas</button>
+          </div>
+
+          <div class="col-12 mt-3">
+            <a class="btn btn-primary" [routerLink]="['/seguidores']" routerLinkActive="router-link-active">Seguidores</a>
+            <button class="btn btn-primary ml-3" *ngIf="idUserAuth !== user._id && !siguiendo" (click)="seguir()">Seguir a {{user.name}} {{user.surname}}</button>
+            <button class="btn btn-primary ml-3" *ngIf="idUserAuth !== user._id && siguiendo" (click)="dejarDeSeguir()">Dejar de seguir a {{user.name}} {{user.surname}}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card mt-4">
+  <div class="card-body">
+    <h3>Top 5 Imagenes con más views</h3>
+    <hr>
+
+    <div class="row" *ngIf="loading">
+      <div class="col">
+        <div class="d-flex justify-content-center align-items-center">
+          <i class="fa fa-5x fa-spin fa-spinner"></i>
+    
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="fotosTop5Views.length == 0 && !loading">
+      <h3 class="text-center">No tienes ninguna Imagen subida</h3>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 col-lg-4" *ngFor="let foto of fotosTop5Views">
+        <div class="card" (click)="verImagen(foto._id)" style="cursor: pointer">
+          <img [src]="foto.ruta" alt="" class="card-img-top">
+    
+          <div class="card-body">
+            <h3>{{foto.nombre}}</h3>
+            <hr>
+            <i class="fa fa-eye"></i> {{foto.views}}
+            <i class="fa fa-heart ml-4"></i> {{foto.likes}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card mt-4">
+  <div class="card-body">
+    <h3>Las más populares</h3>
+    <hr>
+
+    <div class="row" *ngIf="loading">
+        <div class="col">
+          <div class="d-flex justify-content-center align-items-center">
+            <i class="fa fa-5x fa-spin fa-spinner"></i>
+      
+          </div>
+        </div>
+      </div>
+
+    <div *ngIf="fotosTop5Views.length == 0 && !loading">
+      <h3 class="text-center">No tienes ninguna Imagen subida</h3>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 col-lg-4" *ngFor="let foto of fotosPopulares">
+        <div class="card" (click)="verImagen(foto._id)" style="cursor: pointer">
+          <img [src]="foto.ruta" alt="" class="card-img-top">
+    
+          <div class="card-body">
+            <h3>{{foto.nombre}}</h3>
+            <hr>
+            <i class="fa fa-eye"></i> {{foto.views}}
+            <i class="fa fa-heart ml-4"></i> {{foto.likes}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content text-white">
+      <div class="modal-header bg-success">
+        <h5 class="modal-title" id="exampleModalLabel">Cambio de contraseña</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form #form="ngForm">
+      <div class="modal-body bg-dark">
+          <div class="form-group">
+            <label for="">Contraseña Actual</label>
+            <input type="password" 
+            class="form-control" 
+            name="CurrentPassword"
+            [(ngModel)]="password.CurrentPassword" 
+            #currentPassword="ngModel" 
+            [ngClass]="{'is-invalid': currentPassword.invalid && currentPassword.touched}"
+            required>
+          </div>
+
+          <div class="form-group">
+              <label for="">Contraseña Nueva</label>
+              <input type="password"
+               class="form-control"
+                name="newPassword" 
+                [(ngModel)]="password.newPassword" 
+                #newPassword="ngModel" 
+                [ngClass]="{'is-invalid': newPassword.invalid && newPassword.touched}"
+                required>
+            </div>
+          </div>
+          <div class="modal-footer bg-dark">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-times-circle"></i> Cerrar</button>
+            <button type="submit" class="btn btn-primary" data-dismiss="modal" [disabled]="form.invalid" (click)="updatePassword()"><i class="fa fa-save"></i> Guardar</button>
+          </div>
+        </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content text-white">
+      <div class="modal-header bg-success">
+        <h5 class="modal-title" id="exampleModalLabel2">Editar datos del usuario</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form #formUser="ngForm">
+        <div class="modal-body bg-dark">
+          <div class="form-group">
+            <label for="">Nombre</label>
+            <input type="input" class="form-control" name="name" [(ngModel)]="userModif.name" #name="ngModel"
+              [ngClass]="{'is-invalid': name.invalid && name.touched}" required>
+          </div>
+      
+          <div class="form-group">
+            <label for="">Apellido</label>
+            <input type="input" class="form-control" name="surname" [(ngModel)]="userModif.surname" #surname="ngModel"
+              [ngClass]="{'is-invalid': surname.invalid && surname.touched}" required>
+          </div>
+      
+          <div class="form-group">
+            <label for="">Mail</label>
+            <input type="input" class="form-control" name="mail" [(ngModel)]="userModif.mail" #mail="ngModel" [ngClass]="{'is-invalid': mail.invalid && mail.touched}"
+              required>
+          </div>
+        </div>
+        <div class="modal-footer bg-dark">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-times-circle"></i> Cerrar</button>
+          <button type="submit" class="btn btn-primary" data-dismiss="modal" [disabled]="formUser.invalid" (click)="updateUser()"><i
+              class="fa fa-save"></i> Guardar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
